--- a/app/src/main/res/layout/activity_participants.xml
+++ b/app/src/main/res/layout/activity_participants.xml
@@ -4,12 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gris_clair">
+    android:background="#FAFAFA">
 
+    <!-- ================= TOOLBAR ================= -->
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bleu_marine">
+        android:background="#4F9BB7">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,19 +27,20 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Retour"
                 android:src="@drawable/ic_back"
-                app:tint="@color/white" />
+                app:tint="@android:color/white" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text="Liste des Participants"
-                android:textColor="@color/white"
+                android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
+    <!-- ================= CONTENT ================= -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -50,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Filtrer par rôle :"
-            android:textColor="@color/bleu_marine"
+            android:textColor="#4F9BB7"
             android:textStyle="bold"
             android:layout_marginBottom="4dp"
             android:layout_marginStart="4dp"/>
@@ -77,5 +79,6 @@
             android:clipToPadding="false"
             android:paddingBottom="16dp"/>
     </LinearLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
