--- a/app/src/main/res/layout/fragment_supervision_dashboard.xml
+++ b/app/src/main/res/layout/fragment_supervision_dashboard.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="20dp"
-    android:background="#F8FDFF">
+    android:background="#FAFAFA">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,8 +13,8 @@
         android:text="Bonjour Mr le superviseur,"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textColor="#52C2C7"
-        android:layout_marginBottom="8dp"/>
+        android:textColor="#4F9BB7"
+    android:layout_marginBottom="8dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,6 +22,7 @@
         android:text="Merci pour votre contribution ! Gérez cette mission avec soin et efficacité."
         android:textSize="16sp"
         android:gravity="center"
+        android:textColor="#000000"
         android:layout_marginBottom="32dp"/>
 
     <Button
@@ -29,22 +30,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Vérifier Participants (Présence)"
-        android:backgroundTint="#4CAF50"
-        android:layout_marginBottom="12dp"/>
+        android:backgroundTint="#4F9BB7"
+    android:textColor="@android:color/white"
+    android:layout_marginBottom="12dp"/>
 
     <Button
         android:id="@+id/btnVerifierMateriel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Vérifier Matériel"
-        android:backgroundTint="#52C2C7"/>
+        android:backgroundTint="#52C2C7"
+    android:textColor="@android:color/white"
+    android:layout_marginBottom="12dp"/>
+
     <Button
         android:id="@+id/btnCloturerMission"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Clôturer la mission"
         android:backgroundTint="#F44336"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="20dp"/>
+    android:textColor="@android:color/white"
+    android:layout_marginTop="20dp"/>
 
 </LinearLayout>
